--- a/src/HWs/HW1-RubberTetrahedron/CMakeLists.txt
+++ b/src/HWs/HW1-RubberTetrahedron/CMakeLists.txt
@@ -1,5 +1,5 @@
 create_simple_config(NAME
-                   rubberCube
+                   rubberTetrahedron
                    SRCS
                    physics.hpp
                    main.cpp)
