--- a/src/Demos/CMakeLists.txt
+++ b/src/Demos/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_subdirectory(Simple-Deformations)
 add_subdirectory(Intro)
+add_subdirectory(Simple-Deformations)
+add_subdirectory(Finite-Element-Tests)
