--- a/src/Demos/Simple-Deformations/CMakeLists.txt
+++ b/src/Demos/Simple-Deformations/CMakeLists.txt
@@ -4,3 +4,5 @@ add_subdirectory(latticeMeshBoundary)
 add_subdirectory(latticeMeshBoundaryRelaxation)
 add_subdirectory(latticeMeshElasticityTest1)
 add_subdirectory(latticeMeshElasticityTest2)
+add_subdirectory(latticeMeshElasticityTest3)
+add_subdirectory(latticeMeshElasticityTest4)
