--- a/src/Demos/Finite-Element-Tests/CMakeLists.txt
+++ b/src/Demos/Finite-Element-Tests/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_subdirectory(MembranePinch1)
 add_subdirectory(MembranePinch2)
-
+add_subdirectory(MembranePinch3)
+add_subdirectory(MembranePinch4)
+add_subdirectory(MembranePinch5)
+add_subdirectory(MembranePinch6)
+add_subdirectory(MembraneStretch1)
