--- a/src/HWs/Commons/CMakeLists.txt
+++ b/src/HWs/Commons/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(hw-commons-header INTERFACE)
 target_include_directories(hw-commons-header INTERFACE include)
 
-add_library(hw-commons STATIC src/dummy.cpp)
+add_library(hw-commons STATIC src/MeshLoader.cpp)
 target_include_directories(hw-commons
                            PUBLIC ${USD_COMMON_INCLUDES}
                            INTERFACE include)
