HW2 cuda version WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,11 @@ set(CMAKE_CXX_FLAGS "/wd\"4244\" /wd\"4305\" /wd\"4267\" ${CMAKE_CXX_FLAGS}")
 set(Python_ADDITIONAL_VERSIONS 2.7)
 find_package(PythonLibs REQUIRED)
 find_package(OpenGL)
-find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+find_package(Eigen3
+             3.3
+             REQUIRED
+             NO_MODULE)
+set(EIGEN3_INCLUDE_DIRS "C:/Program Files/Eigen3")
 
 # set(USD_ROOT_DIR "$<$<CONFIG:Debug>:$ENV{USD_HOME_DBG}>$<$<CONFIG:Release>:$EN
 # V{USD_HOME_RLS}>")
@@ -56,6 +60,8 @@ function(create_simple_config)
   target_link_libraries(${PARSED_ARGS_NAME} ${USD_COMMON_LIBS} Eigen3::Eigen)
 
 endfunction(create_simple_config)
+
+add_compile_definitions(CS839_ROOT_DIR="${PROJECT_SOURCE_DIR}/")
 
 add_subdirectory(src/Demos)
 add_subdirectory(src/HWs)
