--- a/src/Demos/Finite-Element-Tests/CMakeLists.txt
+++ b/src/Demos/Finite-Element-Tests/CMakeLists.txt
@@ -5,3 +5,6 @@ add_subdirectory(MembranePinch4)
 add_subdirectory(MembranePinch5)
 add_subdirectory(MembranePinch6)
 add_subdirectory(MembraneStretch1)
+add_subdirectory(MembraneStretch2)
+add_subdirectory(MembraneStretch3)
+add_subdirectory(MembraneStretchPD)
