--- a/src/HWs/CMakeLists.txt
+++ b/src/HWs/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_subdirectory(Commons)
 add_subdirectory(HW1-rubberTetrahedron)
-add_subdirectory(HW2-rubberBunny)
+add_subdirectory(HW2-rubberCube)
