--- a/src/HWs/CMakeLists.txt
+++ b/src/HWs/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(Commons)
 add_subdirectory(HW1-rubberTetrahedron)
 add_subdirectory(HW2-rubberCube)
+add_subdirectory(HW3-rubberBunny)
